slash-1.0.8, 2000.07.xx
-----------------------

*	Fixed pollBooth not displaying comments (T Caleb Fauver)


slash-1.0.7, 2000.07.12
-----------------------

*	Poll booth now checks to insure answers are in range before
	counting them

*	Removed spurious entries for user with uid "7" in users_
	tables in slashdata_dump.sql

*	Add schema changes for 1.0.6 back into slash_schema.sql

*	Added fixparam() function (same as fixurl($foo, 1)) and
	cleaned up fixurl() to better handle stuff

* 	Slash now checks story dates for validity before saves and
	updates


slash-1.0.6, 2000.07.10
-----------------------

*	Don't let BLOCKQUOTEs nest more than 4 in comments.pl (same
	as UL and OL)

*	Added Bundle::CPAN to Bundle::Slash (see INSTALL)

*	Don't let users edit authors without seclev >= 500 (ttyp0)

*	Fix for all TEXTAREA sections, converting all < and > and &
	characters to HTML entities

*	Add text next to "moderate" button to warn authors that
	checkbox is for deleting comments

*	Change redirect code to use URI->new_abs->canonical
	(still use old method if $rootdir eq '')

*	Fixed bug in search.pl where users could not click back to
	the first page of results using the "xx previous matches"
	link (Joris Trooster)

*	When performing a user search using search.pl, it will also
	check the fakeemail field, in addition to the nickname

*	Fix to allow "%" and "#" in URLs for Slash::fixurl()

*	No longer show comments to regular users in submit.pl

*	Disallow most characters from nicknames in users.pl

*	Add session-based cookies for Anonymous Coward for use
	with formkeys in submission and comment posting forms
	in Slash.pm, comments.pl

*	Slash::setCookie() can be called with an addition boolean
	parameter to set temporary, session-based cookies

*	Fixed bug that allowed users to moderate a single comment more
	than once

*	Submission titles are now shown on the browser's titlebar

*	Section articles appearing on the main index now also have a